--- a/app/views/restuarants/show.html.erb
+++ b/app/views/restuarants/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<%= image_tag @restuarant.image.url %>
 <p>
   <strong>Name:</strong>
   <%= @restuarant.name %>
