--- a/app/views/restuarants/_form.html.erb
+++ b/app/views/restuarants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@restuarant) do |f| %>
+<%= form_for(@restuarant, :html => {multipart: true}) do |f| %>
   <% if @restuarant.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@restuarant.errors.count, "error") %> prohibited this restuarant from being saved:</h2>
@@ -15,17 +15,21 @@
     <%= f.label :name %><br>
     <%= f.text_field :name, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :address %><br>
     <%= f.text_field :address, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :phone %><br>
     <%= f.text_field :phone, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :website %><br>
     <%= f.text_field :website, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image %><br>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
   <div class="actions">
     <%= f.submit class: "btn btn-primary"%>
